Fixing trash modal on mobile Removed useless logging

--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,18 @@
     float: right;
 }
 
-.trash-modal-file-link {
+.trash-modal-file-links {
+    overflow-y: scroll;
+    max-height: 30vw;
+}
+
+.trash-modal-link {
     line-height: 10px;
     color: var(--text-accent);
     text-decoration: underline;
     cursor: pointer;
 }
 
-.trash-modal-file-link:hover {
+.trash-modal-link:hover {
     color: var(--text-accent-hover, var(--text-accent));
 }
